...
struct AssistantDrawerUIToolbar: View {
    @Binding var assistantIsOpen: Bool
    @Binding var isFullScreen: Bool
    @Binding var isUsingSpeech: Bool
    @Binding var isSpeaking: Bool
    @Binding var animationValues: Array<CGFloat>
    @Binding var assistantStateText: String
    @Binding var inputSpeech: String
    @Binding var inputText: String
    @Binding var isFinalSpeech: Bool
    @Binding var isListening: Bool
    @Binding var showPermissionAlert: Bool
    @Binding var keyboardToggled: Bool
...
                .padding(.bottom, -4)
                
                HStack{
                    Text(inputSpeech)
                        .font(.custom(toolbarParameters.inputSpeechStatefont, size: CGFloat( toolbarParameters.inputSpeechFontSize)))
                        .foregroundColor(Color.init(hex: !isFinalSpeech ? toolbarParameters.inputSpeechPartialForegroundColor : toolbarParameters.inputSpeechFinalForegroundColor))
                        .accessibilityIdentifier("inputSpeechText")
                    Spacer()
                }
                .frame(maxWidth: .infinity, minHeight: 40)
                .padding(.horizontal, 8)
                .background(Color.init(hex: toolbarProps?.speechResultBoxBackgroundColor ?? configurationToolbarProps.speechResultBoxBackgroundColor ?? "#00000080"))
                .cornerRadius(CGFloat(10))
...
                    .frame(minWidth: 44, minHeight: 44)
                    .alert(isPresented: $showPermissionAlert) {
                        Alert(title: Text("Permission Denied"),
                              message: Text("You do not have permission to use speech recognition. Go to your app settings to grant permission and then try again.")
                        )
                    }
                    .accessibilityIdentifier("micButton")
                    Spacer()
                }
                HStack{
                    TextField(toolbarProps?.placeholder ?? configurationToolbarProps.placeholder ?? "Enter a message...", text: $inputText){focused in
                        if(focused){
                            isUsingSpeech = false
...
                    }
                    .font(.custom(toolbarProps?.textboxFontFamily ?? configurationToolbarProps.textboxFontFamily ?? "SF Pro" , size: CGFloat(toolbarProps?.textboxFontSize ?? configurationToolbarProps.textboxFontSize ?? 16)))
                    .padding(.leading, 10)
                    .overlay(VStack{Divider().background(Color(hex: isUsingSpeech ? toolbarProps?.textInputLineColor ?? configurationToolbarProps.textInputTextColor ?? "#CCCCCC" : toolbarProps?.textInputActiveLineColor ?? configurationToolbarProps.textInputLineColor ?? "#CCCCCC")).offset(x: 0, y: 15)}.padding(.leading, 10))
                    .accentColor(Color.init(hex: toolbarProps?.textInputCursorColor ?? configurationToolbarProps.textInputCursorColor ?? "#A3A3A3"))
                    .foregroundColor(Color.init(hex: toolbarProps?.textInputTextColor ?? configurationToolbarProps.textInputTextColor ?? "8F97A1"))
                    .accessibilityIdentifier("messageInputField")
                    Button(action:{
                        if !inputText.isEmpty {
                            UIApplication.shared.endEditing()
                            messages.append(Message(id: UUID().uuidString, text: inputText, origin: "Sent"))
                            voicifyAssistant.makeTextRequest(text: inputText, inputType: "text")
                            inputText = ""
...
                            .renderingMode((!isUsingSpeech && !(toolbarProps?.sendActiveColor ?? configurationToolbarProps.sendActiveColor ?? "").isEmpty) ? .template : .none)
                            .foregroundColor(Color.init(hex: toolbarProps?.sendActiveColor ?? configurationToolbarProps.sendActiveColor ?? ""))
                            .frame(width: CGFloat(toolbarProps?.sendImageWidth ?? configurationToolbarProps.sendImageWidth ?? 28), height: CGFloat(toolbarProps?.sendImageHeight ?? configurationToolbarProps.sendImageHeight ?? 28))
                        }
                        
                    }
                    .accessibilityIdentifier("sendButton")
                }
                .padding(.top, 22)
                .padding(.bottom, 10)
                .padding(.trailing, 10)
                .background(Color.init(hex: !isUsingSpeech ? toolbarProps?.textboxActiveHighlightColor ?? configurationToolbarProps.textboxActiveHighlightColor ?? "#1e7eb91f" : toolbarProps?.textboxInactiveHighlightColor ?? configurationToolbarProps.textboxInactiveHighlightColor ?? "00000000"))
                .cornerRadius(CGFloat(10))
...
