...
                                            .background(Color.init(hex: bodyProps?.assistantImageBackgroundColor ??  configurationBodyProps.assistantImageBackgroundColor ?? "#00000000"))
                                            .cornerRadius(CGFloat(bodyProps?.assistantImageBorderRadius ??  configurationBodyProps.assistantImageBorderRadius ?? 20))
                                        Spacer()
                                    }
                                    VStack{
                                        Text(.init(message.text) )
                                            .accessibilityIdentifier("messageReceivedText")
                                            .foregroundColor(Color.init(hex: bodyProps?.messageReceivedTextColor ??  configurationBodyProps.messageReceivedTextColor ?? "#000000"))
                                            .font(.custom(bodyProps?.messageReceivedFontFamily ??  configurationBodyProps.messageReceivedFontFamily ?? "SF Pro" , size: CGFloat(bodyProps?.messageReceivedFontSize ??  configurationBodyProps.messageReceivedFontSize ?? 14)))
                                            .padding(EdgeInsets(top: 6, leading: 6, bottom: 6, trailing: 6))
                                            .background(RoundedCorners(tl: CGFloat(bodyProps?.messageReceivedBorderTopLeftRadius ??  configurationBodyProps.messageReceivedBorderTopLeftRadius ?? 0), tr: CGFloat(bodyProps?.messageReceivedBorderTopRightRadius ??  configurationBodyProps.messageReceivedBorderTopRightRadius ?? 10), bl: CGFloat(bodyProps?.messageReceivedBorderBottomLeftRadius ??  configu
                                            .background(RoundedCorners(tl: CGFloat(bodyProps?.messageReceivedBorderTopLeftRadius ??  configurationBodyProps.messageReceivedBorderTopLeftRadius ?? 0), tr: CGFloat(bodyProps?.messageReceivedBorderTopRightRadius ??  configurationBodyProps.messageReceivedBorderTopRightRadius ?? 10), bl: CGFloat(bodyProps?.messageReceivedBorderBottomLeftRadius ??  configu
                                                .fill(Color.init(hex: bodyProps?.messageReceivedBackgroundColor ??  configurationBodyProps.messageReceivedBackgroundColor ?? "#0000000d")!))
...
                                .id(message.id)
                            }
                            else{
                                HStack{
                                    Spacer()
                                    Text(message.text)
                                        .accessibilityIdentifier("messageSentText")
                                        .font(.custom(bodyProps?.messageSentFontFamily ??  configurationBodyProps.messageSentFontFamily ?? "SF Pro" , size: CGFloat(bodyProps?.messageSentFontSize ?? configurationBodyProps.messageSentFontSize ?? 14)))
                                        .foregroundColor(Color.init(hex:bodyProps?.messageSentTextColor ??  configurationBodyProps.messageSentTextColor ?? "#ffffff"))
                                        .padding(EdgeInsets(top: 6, leading: 6, bottom: 6, trailing: 6))
                                        .background(RoundedCorners(tl: CGFloat(bodyProps?.messageSentBorderTopLeftRadius ??  configurationBodyProps.messageSentBorderTopLeftRadius ?? 8), tr: CGFloat(bodyProps?.messageSentBorderTopRightRadius ??  configurationBodyProps.messageSentBorderTopRightRadius ?? 0), bl: CGFloat(bodyProps?.messageSentBorderBottomLeftRadius ??  configurationBodyProps.messageSe
                                        .background(RoundedCorners(tl: CGFloat(bodyProps?.messageSentBorderTopLeftRadius ??  configurationBodyProps.messageSentBorderTopLeftRadius ?? 8), tr: CGFloat(bodyProps?.messageSentBorderTopRightRadius ??  configurationBodyProps.messageSentBorderTopRightRadius ?? 0), bl: CGFloat(bodyProps?.messageSentBorderBottomLeftRadius ??  configurationBodyProps.messageSe
                                            .fill(Color.init(hex: bodyProps?.messageSentBackgroundColor ?? configurationBodyProps.messageSentBackgroundColor ?? "#00000080")!))
...
